[package]
name = "rustle"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Link Time Optimization
codegen-units = 1  # Serialized compilations for better optimization but slower compilation.
opt-level = "z"  # Optimize for size.
# panic = "abort"  # No console tracebacks in release version

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
colorful = "0.2.1"
rand = "0.8.4"
crossterm = "0.23.0"
